--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
     <div class="botao-conteiner">
         <a href="./animal1.html">
-            <button type="button" onclick="clearItems()" class="botao-go">Começar</button>
+            <button onclick="clearItems()" class="botao-go">Começar</button>
         </a>
     </div>
 
-    <img src="./Banco de Dados/(0)mato.png" class="mato">
+    <img src="./Banco de Dados/0_mato.png" class="mato">
     <div class="linhaFinal"></div>
 
 </body>
