--- a/animal12.html
+++ b/animal12.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./Banco de Dados/(12) rato + gato.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./Banco de Dados/12_rato + gato.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
