--- a/animal14.html
+++ b/animal14.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./Banco de Dados/(5) hipopotamo + cobra.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./Banco de Dados/14_tubarão + jacaré.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
