--- a/animal2.html
+++ b/animal2.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./Banco de Dados/(2) cachorro + morcego.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./Banco de Dados/2_cachorro + morcego.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
