--- a/animal4.html
+++ b/animal4.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./Banco de Dados/(4) girafa + tigre.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./Banco de Dados/4_girafa + tigre.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
