--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <li>3: Após escrever o nome, clique em enviar e pule para o próximo animal</li>
         </ul>
     </div>
-
+    <a href="./animal1.html">
     <div class="botao-conteiner">
-        <a href="./animal1.html">
+       
             <button onclick="clearItems()" class="botao-go">Começar</button>
-        </a>
-    </div>
+        
+    </div></a>
 
     <img src="./Banco de Dados/0_mato.png" class="mato">
     <div class="linhaFinal"></div>
