--- a/index.html
+++ b/index.html
@@ -33,15 +33,18 @@
             <li>2: Você deve criar um nome para o animal fictício que lhe apareceu</li>
             <li>3: Após escrever o nome, clique em enviar e pule para o próximo animal</li>
         </ul>
+
     </div>
-    
+
     <div class="botao-conteiner">
         <button onclick="clearItems(); window.location.href='./animal1.html';" class="botao-go">Começar</button>
+
     </div>
-    
 
     <img src="./Banco de Dados/0_mato.png" class="mato">
-    <div class="linhaFinal"></div>
+    <div  class="linhaFinal">
+
+    </div>
 
 </body>
 
