--- a/animal1.html
+++ b/animal1.html
@@ -1,20 +1,15 @@
-
-<!-- Carlos Eduardo Pereira ; (2024002532) ; 27/09/2024 -->
-
+<!DOCTYPE html>
 <html lang="pt-br">
-
-</html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal 1</title>
     <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="./script.js" defer></script>
 </head>
 
 <body>
-
     <div class="menu">
         <ul>
             <li><a href="./index.html">Início</a></li>
