--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     </div>
 
     <div class="botao-conteiner">
-        <button onclick="clearItems(); window.location.href='./animal1.html';" class="botao-go">Começar</button>
-
+        <a href="./animal1.html">
+            <button onclick=clearItems() class="botao-go">Começar</button>
     </div>
+    </a>
 
     <img src="./BancodeDados/0_mato.png" class="mato">
-    <div  class="linhaFinal">
+    <div class="linhaFinal">
 
     </div>
 
