--- a/animal16.html
+++ b/animal16.html
@@ -24,7 +24,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/16_leão + aguia.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/16.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
