--- a/animal2.html
+++ b/animal2.html
@@ -23,7 +23,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/2_cachorro + morcego.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/2.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
