--- a/animal7.html
+++ b/animal7.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/7_leão + foca.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/7.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
