--- a/animal1.html
+++ b/animal1.html
@@ -20,7 +20,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/1_bixo preguiça + sapo.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/1.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
