--- a/animal10.html
+++ b/animal10.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/10_pinguim + cervo.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/10.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
