--- a/animal11.html
+++ b/animal11.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/11_porquinho da india + curuja.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/11.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
