--- a/animal13.html
+++ b/animal13.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/13_tigre + jacare.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/13.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
