--- a/animal15.html
+++ b/animal15.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/15_urso + abelha.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/15.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
