--- a/animal3.html
+++ b/animal3.html
@@ -24,7 +24,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/3_cavalo + peixe.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/3.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
