--- a/animal6.html
+++ b/animal6.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/6_urso + camaleão.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/6.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
