--- a/animal8.html
+++ b/animal8.html
@@ -25,7 +25,7 @@
     <h1 class="tituloh1">Qual o nome desse animal?</h1>
 
     <div>
-        <br><img src="./BancodeDados/8_lobo + porco.jpeg" class="animais" alt="Imagem do animal">
+        <br><img src="./BancodeDados/8.jpeg" class="animais" alt="Imagem do animal">
     </div>
 
     <div id="Resp1">
