--- a/animal1.html
+++ b/animal1.html
@@ -1,15 +1,15 @@
+<!-- Carlos Eduardo Pereira ; (2024002532) ; 27/09/2024 -->
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal 1</title>
-    <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" src="./script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
-
 <body>
+
     <div class="menu">
         <ul>
             <li><a href="./index.html">Início</a></li>
@@ -28,10 +28,7 @@
     </div>
 
     <div class="botaoProxPag">
-        <a href="./animal2.html">
-            <button onclick="addItem()">Enviar e Prosseguir</button>
-        </a>
+        <button onclick="addItem(); window.location.href='./animal2.html';">Enviar e Prosseguir</button>
     </div>
 </body>
-
 </html>
