--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
+<!-- Carlos Eduardo Pereira ; (2024002532) ; 27/09/2024 -->
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +9,10 @@
     <meta name="keywords" content="Zootopia, animais, IA, nomeador de animais, projeto interativo">
     <meta name="author" content="Carlos Eduardo Pereira">
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="./script.js" defer></script>
+    <script type="text/javascript" src="script.js"></script>
 </head>
-
 <body>
+
     <div class="menu">
         <ul>
             <li><a href="./index.html">Início</a></li>
@@ -32,11 +32,13 @@
     </div>
 
     <div class="botao-conteiner">
-        <button class="botao-go" onclick="startGame()">Começar</button>
+        <a href="./animal1.html">
+        <button onclick=clearItems()  class="botao-go">Começar</button>
     </div>
+    </a>
 
-    <img src="./BancodeDados/0.png" class="mato">
+    <img src="./BancodeDados/0.png" class="mato" alt="Imagem do fundo">
     <div class="linhaFinal"></div>
-</body>
 
+</body>
 </html>
