--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
     <div class="botao-conteiner">
         <a href="./animal1.html">
-        <button onclick=clearItems()  class="botao-go">Começar</button>
-    </div>
-    </a>
+        <button onclick="clearItems();" class="botao-go">Começar</button>
+    
+    </a></div>
 
     <img src="./BancodeDados/0.png" class="mato" alt="Imagem do fundo">
     <div class="linhaFinal"></div>
