--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!-- Carlos Eduardo Pereira ; (2024002532) ; 27/09/2024 -->
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zootopia</title>
-    <meta name="description" content="Zootopia é um projeto divertido onde você cria nomes para animais fictícios gerados por IA.">
+    <meta name="description"
+        content="Zootopia é um projeto divertido onde você cria nomes para animais fictícios gerados por IA.">
     <meta name="keywords" content="Zootopia, animais, IA, nomeador de animais, projeto interativo">
     <meta name="author" content="Carlos Eduardo Pereira">
     <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js"></script>
 </head>
+
 <body>
 
     <div class="menu">
@@ -33,12 +36,13 @@
 
     <div class="botao-conteiner">
         <a href="./animal1.html">
-        <button onclick="clearItems();" class="botao-go">Começar</button>
-    
-    </a></div>
+            <button onclick="clearItems();" class="botao-go">Começar</button>
+        </a>
+    </div>
 
     <img src="./BancodeDados/0.png" class="mato" alt="Imagem do fundo">
     <div class="linhaFinal"></div>
 
 </body>
+
 </html>
