--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     </div>
 
     <div class="botao-conteiner">
-        <a href="./animal1.html">
-            <button onclick="clearItems();" class="botao-go">Começar</button>
-        </a>
+            <button onclick="goToAnimal1();clearItems();" class="botao-go">Começar</button>
     </div>
 
     <img src="./BancodeDados/0.png" class="mato" alt="Imagem do fundo">
